--- a/Index.html
+++ b/Index.html
@@ -136,7 +136,7 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
+    <!-- Navigatorbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -174,7 +174,7 @@
     <div class="hero-section">
         <div class="container" data-aos="fade-up">
             <h1>K&J CondotelRent</h1>
-            <p>บริการให้เช่าห้องพักสไตล์คอนโด รายวัน–รายเดือน</p>
+            <p>บริการให้เช่าห้องพักสไตล์คอนโด รายวัน–รายเดือน </p>
             <img src="/images/Location.jpg" alt="ภาพทำเลคอนโด" class="img-fluid mb-4 rounded" style="max-height:600px; width:100%; object-fit:cover;">
             <a href="#locations" class="btn btn-custom btn-lg">
                 <i class="fas fa-search"></i> เริ่มค้นหาที่พักของเรา
