--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="container" data-aos="fade-up">
             <h1>K&J CondotelRent</h1>
             <p>บริการให้เช่าห้องพักสไตล์คอนโด รายวัน–รายเดือน </p>
-            <img src="/images/Location.jpg" alt="ภาพทำเลคอนโด" class="img-fluid mb-4 rounded" style="max-height:600px; width:100%; object-fit:cover;">
+            <img src="./images/Location.jpg" alt="ภาพทำเลคอนโด" class="img-fluid mb-4 rounded" style="max-height:600px; width:100%; object-fit:cover;">
             <a href="#locations" class="btn btn-custom btn-lg">
                 <i class="fas fa-search"></i> เริ่มค้นหาที่พักของเรา
             </a>
@@ -254,22 +254,22 @@
                 <div id="locationCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Location images">
                     <div class="carousel-inner rounded">
                         <div class="carousel-item active">
-                            <img src="/images/slide1.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 1 - ทำเล กรุงเทพฯ">
+                            <img src="./images/slide1.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 1 - ทำเล กรุงเทพฯ">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/slide2.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 2 - ทำเล พัทยา">
+                            <img src="./images/slide2.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 2 - ทำเล พัทยา">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/slide3.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 3 - ทำเล ชะอำ">
+                            <img src="./images/slide3.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 3 - ทำเล ชะอำ">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/slide4.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 4 - บรรยากาศคอนโด">
+                            <img src="./images/slide4.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 4 - บรรยากาศคอนโด">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/slide5.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 5 - วิวทะเล">
+                            <img src="./images/slide5.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 5 - วิวทะเล">
                         </div>
                         <div class="carousel-item">
-                            <img src="/images/slide6.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 6 - ภายในห้องพัก">
+                            <img src="./images/slide6.jpg" class="d-block w-100 carousel-img rounded" alt="ภาพสไลด์ 6 - ภายในห้องพัก">
                         </div>
                     </div>
 
