add ./ page path

--- a/Page2.1.html
+++ b/Page2.1.html
@@ -40,18 +40,18 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-building"></i> K&J CondotelRent</a>
+            <a class="navbar-brand" href="./index.html"><i class="fas fa-building"></i> K&J CondotelRent</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">หน้าแรก</a></li>
-                    <li class="nav-item"><a class="nav-link" href="page1.html">กรุงเทพฯ</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="page2.html">พัทยา</a></li>
-                    <li class="nav-item"><a class="nav-link" href="page3.html">ชะอำ-ปึกเตียน</a></li>
-                    <li class="nav-item"><a class="nav-link" href="page7.html">ดาวน์โหลด</a></li>
-                    <li class="nav-item"><a class="nav-link" href="page8.html">ติดต่อเรา</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">หน้าแรก</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./page1.html">กรุงเทพฯ</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./page2.html">พัทยา</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./page7.html">ดาวน์โหลด</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./page8.html">ติดต่อเรา</a></li>
                 </ul>
             </div>
         </div>
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="detail-container" data-aos="fade-up">
-            <a href="page2.html" class="btn btn-back mb-4"><i class="fas fa-arrow-left"></i> กลับหน้ารายการ</a>
+            <a href="./page2.html" class="btn btn-back mb-4"><i class="fas fa-arrow-left"></i> กลับหน้ารายการ</a>
             <h1 class="condo-title" id="condoTitle">The Riviera Jomtien</h1>
 
             <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=1200&h=800&fit=crop" class="main-image" id="mainImage" alt="คอนโด">
@@ -147,7 +147,7 @@
                     <div class="info-section">
                         <h2 class="info-title"><i class="fas fa-phone"></i> ติดต่อสอบถาม</h2>
                         <div class="text-center">
-                            <a href="page8.html" class="btn btn-contact w-100 mb-3">
+                            <a href="./page8.html" class="btn btn-contact w-100 mb-3">
                                 <i class="fas fa-envelope"></i> ส่งข้อความ
                             </a>
                             <a href="tel:02-xxx-xxxx" class="btn btn-contact w-100">
