--- a/Page1.1.html
+++ b/Page1.1.html
@@ -175,22 +175,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">หน้าแรก</a>
+                        <a class="nav-link" href="./index.html">หน้าแรก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="page1.html">กรุงเทพฯ</a>
+                        <a class="nav-link active" href="./page1.html">กรุงเทพฯ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page2.html">พัทยา</a>
+                        <a class="nav-link" href="./page2.html">พัทยา</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page3.html">ชะอำ-ปึกเตียน</a>
+                        <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page7.html">ดาวน์โหลด</a>
+                        <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page8.html">ติดต่อเรา</a>
+                        <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
                     </li>
                 </ul>
             </div>
@@ -200,7 +200,7 @@
     <!-- Detail Content -->
     <div class="container">
         <div class="detail-container" data-aos="fade-up">
-            <a href="page1.html" class="btn btn-back mb-4">
+            <a href="./page1.html" class="btn btn-back mb-4">
                 <i class="fas fa-arrow-left"></i> กลับหน้ารายการ
             </a>
 
@@ -316,7 +316,7 @@
                     <div class="info-section">
                         <h2 class="info-title"><i class="fas fa-phone"></i> ติดต่อสอบถาม</h2>
                         <div class="text-center">
-                            <a href="page8.html" class="btn btn-contact w-100 mb-3">
+                            <a href="./page8.html" class="btn btn-contact w-100 mb-3">
                                 <i class="fas fa-envelope"></i> ส่งข้อความ
                             </a>
                             <a href="tel:02-xxx-xxxx" class="btn btn-contact w-100">
