--- a/Page1.html
+++ b/Page1.html
@@ -128,7 +128,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="./index.html">
                 <i class="fas fa-building"></i> K&J CondotelRent
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -137,22 +137,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">หน้าแรก</a>
+                        <a class="nav-link" href="./index.html">หน้าแรก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="page1.html">กรุงเทพฯ</a>
+                        <a class="nav-link active" href="./page1.html">กรุงเทพฯ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page2.html">พัทยา</a>
+                        <a class="nav-link" href="./page2.html">พัทยา</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page3.html">ชะอำ-ปึกเตียน</a>
+                        <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page7.html">ดาวน์โหลด</a>
+                        <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page8.html">ติดต่อเรา</a>
+                        <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
                     </li>
                 </ul>
             </div>
@@ -185,7 +185,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 65 ตร.ม.</span>
                         </div>
                         <div class="price-tag">3.8 ล้านบาท</div>
-                        <a href="page1.1.html?id=1" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=1" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -207,7 +207,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 35 ตร.ม.</span>
                         </div>
                         <div class="price-tag">2.5 ล้านบาท</div>
-                        <a href="page1.1.html?id=2" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=2" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -229,7 +229,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 48 ตร.ม.</span>
                         </div>
                         <div class="price-tag">3.2 ล้านบาท</div>
-                        <a href="page1.1.html?id=3" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=3" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -251,7 +251,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 120 ตร.ม.</span>
                         </div>
                         <div class="price-tag">15.8 ล้านบาท</div>
-                        <a href="page1.1.html?id=4" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=4" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -273,7 +273,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 28 ตร.ม.</span>
                         </div>
                         <div class="price-tag">2.9 ล้านบาท</div>
-                        <a href="page1.1.html?id=5" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=5" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -295,7 +295,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 58 ตร.ม.</span>
                         </div>
                         <div class="price-tag">4.2 ล้านบาท</div>
-                        <a href="page1.1.html?id=6" class="btn btn-view-detail">
+                        <a href="./page1.1.html?id=6" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
