--- a/Page2.html
+++ b/Page2.html
@@ -137,7 +137,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="./index.html">
                 <i class="fas fa-building"></i> K&J CondotelRent
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -146,22 +146,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">หน้าแรก</a>
+                        <a class="nav-link" href="./index.html">หน้าแรก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page1.html">กรุงเทพฯ</a>
+                        <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="page2.html">พัทยา</a>
+                        <a class="nav-link active" href="./page2.html">พัทยา</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page3.html">ชะอำ-ปึกเตียน</a>
+                        <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page7.html">ดาวน์โหลด</a>
+                        <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page8.html">ติดต่อเรา</a>
+                        <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
                     </li>
                 </ul>
             </div>
@@ -197,7 +197,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 75 ตร.ม.</span>
                         </div>
                         <div class="price-tag">2.8 ล้านบาท</div>
-                        <a href="page2.1.html?id=1" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=1" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -222,7 +222,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 42 ตร.ม.</span>
                         </div>
                         <div class="price-tag">1.8 ล้านบาท</div>
-                        <a href="page2.1.html?id=2" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=2" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -246,7 +246,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 35 ตร.ม.</span>
                         </div>
                         <div class="price-tag">2.2 ล้านบาท</div>
-                        <a href="page2.1.html?id=3" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=3" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -270,7 +270,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 52 ตร.ม.</span>
                         </div>
                         <div class="price-tag">3.5 ล้านบาท</div>
-                        <a href="page2.1.html?id=4" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=4" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -295,7 +295,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 28 ตร.ม.</span>
                         </div>
                         <div class="price-tag">1.5 ล้านบาท</div>
-                        <a href="page2.1.html?id=5" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=5" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
@@ -319,7 +319,7 @@
                             <span class="feature-item"><i class="fas fa-ruler-combined"></i> 68 ตร.ม.</span>
                         </div>
                         <div class="price-tag">4.8 ล้านบาท</div>
-                        <a href="page2.1.html?id=6" class="btn btn-view-detail">
+                        <a href="./page2.1.html?id=6" class="btn btn-view-detail">
                             <i class="fas fa-eye"></i> ดูรายละเอียด
                         </a>
                     </div>
