--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
                         <a class="nav-link active" href="./index.html">หน้าแรก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
+                        <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page2.html">พัทยา</a>
+                        <a class="nav-link" href="./Page2.html">พัทยา</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
+                        <a class="nav-link" href="./Page3.html">ชะอำ-ปึกเตียน</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
+                        <a class="nav-link" href="./Page7.html">ดาวน์โหลด</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
+                        <a class="nav-link" href="./Page8.html">ติดต่อเรา</a>
                     </li>
                 </ul>
             </div>
@@ -200,7 +200,7 @@
                             <p class="card-text">ใจกลางเมือง ใกล้รถไฟฟ้า ครบสิ่งอำนวยความสะดวก</p>
                             <span class="badge-price">เริ่มต้น 1,000 บาท</span>
                             <div class="mt-3">
-                                <a href="./page1.html" class="btn btn-custom">
+                                <a href="./Page1.html" class="btn btn-custom">
                                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
                                 </a>
                             </div>
@@ -220,7 +220,7 @@
                             <p class="card-text">วิวทะเล บรรยากาศรีสอร์ท เหมาะสำหรับการพักผ่อน</p>
                             <span class="badge-price">เริ่มต้น 1,200 บาท</span>
                             <div class="mt-3">
-                                <a href="./page2.html" class="btn btn-custom">
+                                <a href="./Page2.html" class="btn btn-custom">
                                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
                                 </a>
                             </div>
@@ -240,7 +240,7 @@
                             <p class="card-text">ชายทะเล บรรยากาศเงียบสงบ เหมาะแก่การพักอาศัย</p>
                             <span class="badge-price">เริ่มต้น 1,000 บาท</span>
                             <div class="mt-3">
-                                <a href="./page3.html" class="btn btn-custom">
+                                <a href="./Page3.html" class="btn btn-custom">
                                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
                                 </a>
                             </div>
@@ -287,7 +287,7 @@
                 <h3>สนใจห้องพักของเรา?</h3>
                 <p>ติดต่อเราเพื่อสอบถามข้อมูลเพิ่มเติมและจองห้องพักได้เลย!</p>  
             <div class="mt-3">
-                <a href="./page8.html" class="btn btn-custom">
+                <a href="./Page8.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ติดต่อเราเพื่อจองห้องพัก
                                     </a>
             </div>
