--- a/Page7.html
+++ b/Page7.html
@@ -126,7 +126,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html"
+        <a class="navbar-brand" href="./index.html"
           ><i class="fas fa-building"></i> K&J CondotelRent</a
         >
         <button
@@ -140,22 +140,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">หน้าแรก</a>
+              <a class="nav-link" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page1.html">กรุงเทพฯ</a>
+              <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page2.html">พัทยา</a>
+              <a class="nav-link" href="./page2.html">พัทยา</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">ชะอำ-ปึกเตียน</a>
+              <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="page7.html">ดาวน์โหลด</a>
+              <a class="nav-link active" href="./page7.html">ดาวน์โหลด</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page8.html">ติดต่อเรา</a>
+              <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
             </li>
           </ul>
         </div>
@@ -438,7 +438,7 @@
             หากมีข้อสงสัยเกี่ยวกับเอกสารหรือต้องการคำแนะนำเพิ่มเติม
           </p>
           <a
-            href="page8.html"
+            href="./page8.html"
             class="btn btn-download"
             style="max-width: 300px; margin: 0 auto"
           >
