p to Page path2

--- a/Page2.1.html
+++ b/Page2.1.html
@@ -47,11 +47,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html">หน้าแรก</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./page1.html">กรุงเทพฯ</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="./page2.html">พัทยา</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./page7.html">ดาวน์โหลด</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./page8.html">ติดต่อเรา</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Page1.html">กรุงเทพฯ</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./Page2.html">พัทยา</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Page3.html">ชะอำ-ปึกเตียน</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Page7.html">ดาวน์โหลด</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Page8.html">ติดต่อเรา</a></li>
                 </ul>
             </div>
         </div>
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="detail-container" data-aos="fade-up">
-            <a href="./page2.html" class="btn btn-back mb-4"><i class="fas fa-arrow-left"></i> กลับหน้ารายการ</a>
+            <a href="./Page2.html" class="btn btn-back mb-4"><i class="fas fa-arrow-left"></i> กลับหน้ารายการ</a>
             <h1 class="condo-title" id="condoTitle">The Riviera Jomtien</h1>
 
             <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=1200&h=800&fit=crop" class="main-image" id="mainImage" alt="คอนโด">
@@ -147,7 +147,7 @@
                     <div class="info-section">
                         <h2 class="info-title"><i class="fas fa-phone"></i> ติดต่อสอบถาม</h2>
                         <div class="text-center">
-                            <a href="./page8.html" class="btn btn-contact w-100 mb-3">
+                            <a href="./Page8.html" class="btn btn-contact w-100 mb-3">
                                 <i class="fas fa-envelope"></i> ส่งข้อความ
                             </a>
                             <a href="tel:02-xxx-xxxx" class="btn btn-contact w-100">
