--- a/Page3.1.html
+++ b/Page3.1.html
@@ -175,19 +175,19 @@
               <a class="nav-link" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
+              <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page2.html">พัทยา</a>
+              <a class="nav-link" href="./Page2.html">พัทยา</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./page3.html">ชะอำ-ปึกเตียน</a>
+              <a class="nav-link active" href="./Page3.html">ชะอำ-ปึกเตียน</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
+              <a class="nav-link" href="./Page7.html">ดาวน์โหลด</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
+              <a class="nav-link" href="./Page8.html">ติดต่อเรา</a>
             </li>
           </ul>
         </div>
@@ -196,7 +196,7 @@
 
     <div class="container">
       <div class="detail-container" data-aos="fade-up">
-        <a href="./page3.html" class="btn btn-back mb-4"
+        <a href="./Page3.html" class="btn btn-back mb-4"
           ><i class="fas fa-arrow-left"></i> กลับหน้ารายการ</a
         >
         <h1 class="condo-title" id="condoTitle">Springfield Beach Resort</h1>
@@ -365,7 +365,7 @@
                 <i class="fas fa-phone"></i> ติดต่อสอบถาม
               </h2>
               <div class="text-center">
-                <a href="./page8.html" class="btn btn-contact w-100 mb-3">
+                <a href="./Page8.html" class="btn btn-contact w-100 mb-3">
                   <i class="fas fa-envelope"></i> ส่งข้อความ
                 </a>
                 <a href="tel:02-xxx-xxxx" class="btn btn-contact w-100">
