--- a/Page7.html
+++ b/Page7.html
@@ -143,19 +143,19 @@
               <a class="nav-link" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
+              <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page2.html">พัทยา</a>
+              <a class="nav-link" href="./Page2.html">พัทยา</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page3.html">ชะอำ-ปึกเตียน</a>
+              <a class="nav-link" href="./Page3.html">ชะอำ-ปึกเตียน</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./page7.html">ดาวน์โหลด</a>
+              <a class="nav-link active" href="./Page7.html">ดาวน์โหลด</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
+              <a class="nav-link" href="./Page8.html">ติดต่อเรา</a>
             </li>
           </ul>
         </div>
