--- a/Page3.html
+++ b/Page3.html
@@ -156,19 +156,19 @@
               <a class="nav-link" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page1.html">กรุงเทพฯ</a>
+              <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page2.html">พัทยา</a>
+              <a class="nav-link" href="./Page2.html">พัทยา</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./page3.html">ชะอำ-ปึกเตียน</a>
+              <a class="nav-link active" href="./Page3.html">ชะอำ-ปึกเตียน</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page7.html">ดาวน์โหลด</a>
+              <a class="nav-link" href="./Page7.html">ดาวน์โหลด</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./page8.html">ติดต่อเรา</a>
+              <a class="nav-link" href="./Page8.html">ติดต่อเรา</a>
             </li>
           </ul>
         </div>
@@ -213,7 +213,7 @@
                 >
               </div>
               <div class="price-tag">2.3 ล้านบาท</div>
-              <a href="./page3.1.html?id=1" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=1" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
@@ -249,7 +249,7 @@
                 >
               </div>
               <div class="price-tag">1.5 ล้านบาท</div>
-              <a href="./page3.1.html?id=2" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=2" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
@@ -285,7 +285,7 @@
                 >
               </div>
               <div class="price-tag">3.2 ล้านบาท</div>
-              <a href="./page3.1.html?id=3" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=3" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
@@ -322,7 +322,7 @@
                 >
               </div>
               <div class="price-tag">1.8 ล้านบาท</div>
-              <a href="./page3.1.html?id=4" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=4" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
@@ -358,7 +358,7 @@
                 >
               </div>
               <div class="price-tag">1.2 ล้านบาท</div>
-              <a href="./page3.1.html?id=5" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=5" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
@@ -394,7 +394,7 @@
                 >
               </div>
               <div class="price-tag">2.9 ล้านบาท</div>
-              <a href="./page3.1.html?id=6" class="btn btn-view-detail"
+              <a href="./Page3.1.html?id=6" class="btn btn-view-detail"
                 ><i class="fas fa-eye"></i> ดูรายละเอียด</a
               >
             </div>
