--- a/Page1.html
+++ b/Page1.html
@@ -183,6 +183,32 @@
               </ul>
             </li>
 
+            <!-- นครปฐม dropdown -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="nakhonPathomDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                นครปฐม
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="nakhonPathomDropdown">
+                <li>
+                  <a class="dropdown-item" href="./Page4.html?period=daily"
+                    >รายวัน</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./Page4.html?period=monthly"
+                    >รายเดือน</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <!-- พัทยา dropdown -->
             <li class="nav-item dropdown">
               <a
@@ -245,7 +271,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Page Header -->
     <div class="page-header">
       <div class="container">
@@ -256,200 +281,8 @@
 
     <!-- Condo Listings -->
     <div class="container">
-      <div class="row">
-        <!-- Condo 1 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">The Prime Sukhumvit</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> สุขุมวิท 71 ใกล้ BTS
-                พระโขนง
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 2 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 2 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 65 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">3.8 ล้านบาท</div>
-              <a href="./Page1.1.html?id=1" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Condo 2 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">Rhythm Asoke</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> อโศก ใกล้ MRT พระราม 9
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 1 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 1 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 35 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">2.5 ล้านบาท</div>
-              <a href="./Page1.1.html?id=2" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Condo 3 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">Life Ladprao</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> ลาดพร้าว ใกล้ MRT ลาดพร้าว
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 2 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 1 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 48 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">3.2 ล้านบาท</div>
-              <a href="./Page1.1.html?id=3" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Condo 4 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">Noble Ploenchit</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> เพลินจิต ใกล้ BTS เพลินจิต
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 3 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 3 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 120 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">15.8 ล้านบาท</div>
-              <a href="./Page1.1.html?id=4" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Condo 5 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">Ideo Mobi Sathorn</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> สาทร ใกล้ BTS ช่องนนทรี
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 1 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 1 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 28 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">2.9 ล้านบาท</div>
-              <a href="./Page1.1.html?id=5" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Condo 6 -->
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-          <div class="condo-card">
-            <img
-              src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=600&h=400&fit=crop"
-              class="condo-image"
-              alt="คอนโด"
-            />
-            <div class="condo-body">
-              <h3 class="condo-title">The Base Rama 9</h3>
-              <p class="condo-location">
-                <i class="fas fa-map-marker-alt"></i> พระราม 9 ใกล้ Airport Link
-                รามคำแหง
-              </p>
-              <div class="condo-features">
-                <span class="feature-item"
-                  ><i class="fas fa-bed"></i> 2 ห้องนอน</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-bath"></i> 2 ห้องน้ำ</span
-                >
-                <span class="feature-item"
-                  ><i class="fas fa-ruler-combined"></i> 58 ตร.ม.</span
-                >
-              </div>
-              <div class="price-tag">4.2 ล้านบาท</div>
-              <a href="./Page1.1.html?id=6" class="btn btn-view-detail">
-                <i class="fas fa-eye"></i> ดูรายละเอียด
-              </a>
-            </div>
-          </div>
-        </div>
+      <div class="row" id="condo-listings">
+        <!-- รายการคอนโดจะถูกแทรกที่นี่โดย JavaScript -->
       </div>
     </div>
 
@@ -471,6 +304,53 @@
         duration: 1000,
         once: true,
       });
+
+      // ฟังก์ชันแปลง CSV เป็น Array of Objects
+      function parseCSV(csv, delimiter = ',') {
+        const lines = csv.trim().split('\n');
+        const headers = lines[0].split(delimiter).map(h => h.trim());
+        return lines.slice(1).map(line => {
+          const values = line.split(delimiter).map(v => v.trim());
+          return headers.reduce((obj, header, i) => {
+            obj[header] = values[i];
+            return obj;
+          }, {});
+        });
+      }
+
+      // โหลด CSV และแสดงผล
+      fetch('./Bangkok/condos-bangkok.csv')
+        .then(response => response.text())
+        .then(csv => {
+          const condos = parseCSV(csv);
+          const container = document.getElementById('condo-listings');
+          container.innerHTML = condos.map((condo, idx) => `
+            <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="${100 + (idx%3)*100}">
+              <div class="condo-card">
+                <img src="${condo.image}" class="condo-image" alt="คอนโด" />
+                <div class="condo-body">
+                  <h3 class="condo-title">${condo.title}</h3>
+                  <p class="condo-location">
+                    <i class="fas fa-map-marker-alt"></i> ${condo.location}
+                  </p>
+                  <div class="condo-features">
+                    <span class="feature-item"><i class="fas fa-bed"></i> ${condo.bedroom} ห้องนอน</span>
+                    <span class="feature-item"><i class="fas fa-bath"></i> ${condo.bathroom} ห้องน้ำ</span>
+                    <span class="feature-item"><i class="fas fa-ruler-combined"></i> ${condo.size} ตร.ม.</span>
+                  </div>
+                  <div class="price-tag">${Number(condo.price).toLocaleString()} .- </div>
+                  <a href="./Page1.1.html?id=${condo.id}" class="btn btn-view-detail">
+                    <i class="fas fa-eye"></i> ดูรายละเอียด
+                  </a>
+                </div>
+              </div>
+            </div>
+          `).join('');
+          AOS.refresh();
+        })
+        .catch(err => {
+          document.getElementById('condo-listings').innerHTML = '<div class="col-12 text-center text-danger">ไม่สามารถโหลดข้อมูลคอนโดได้</div>';
+        });
     </script>
   </body>
 </html>
