--- a/index.html
+++ b/index.html
@@ -427,6 +427,9 @@
                 <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="./Page4.html">นครปฐม</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="./Page2.html">พัทยา</a>
               </li>
               <li class="nav-item">
@@ -532,7 +535,7 @@
               text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
             "
           >
-            บริการห้องพักไสตล์คอนโด
+            บริการห้องพักสไตล์คอนโด
           </h1>
           <p
             style="
@@ -552,18 +555,17 @@
         </div>
       </div>
     </div>
-    Add
     <!-- Locations Section -->
     <div class="location-section" id="locations">
       <div class="container">
-        <h2 class="section-title" data-aos="fade-up">เลือกทำเลที่คุณสนใจ</h2>
+        <h2 class="section-title" data-aos="fade-up">เลือกพื้นที่ที่คุณสนใจ</h2>
 
         <div class="row g-4">
           <!-- Bangkok Card -->
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?w=600&h=400&fit=crop"
+                src="./images/Bangkok.jpg"
                 class="card-img-top"
                 alt="กรุงเทพฯ"
               />
@@ -575,7 +577,7 @@
                 <p class="card-text">
                   ใจกลางเมือง ใกล้รถไฟฟ้า ครบสิ่งอำนวยความสะดวก
                 </p>
-                <span class="badge-price">เริ่มต้น 1,000 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
                 <div class="mt-3">
                   <a href="./Page1.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
@@ -589,7 +591,7 @@
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600&h=400&fit=crop"
+                src="./images/Pattaya.jpg"
                 class="card-img-top"
                 alt="พัทยา"
               />
@@ -601,7 +603,7 @@
                 <p class="card-text">
                   วิวทะเล บรรยากาศรีสอร์ท เหมาะสำหรับการพักผ่อน
                 </p>
-                <span class="badge-price">เริ่มต้น 1,200 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,200 บาท</span>
                 <div class="mt-3">
                   <a href="./Page2.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
@@ -615,7 +617,7 @@
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=600&h=400&fit=crop"
+                src="./images/Cha-am.jpg"
                 class="card-img-top"
                 alt="ชะอำ"
               />
@@ -627,9 +629,36 @@
                 <p class="card-text">
                   ชายทะเล บรรยากาศเงียบสงบ เหมาะแก่การพักอาศัย
                 </p>
-                <span class="badge-price">เริ่มต้น 1,000 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
                 <div class="mt-3">
                   <a href="./Page3.html" class="btn btn-custom">
+                    <i class="fas fa-arrow-right"></i> ดูรายละเอียด
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Nakonprathom -->
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <img
+                src="./images/Cha-am.jpg"
+                class="card-img-top"
+                alt="ชะอำ"
+              />
+              <div class="card-body text-center">
+                <div class="feature-icon">
+                  <i class="fas fa-water"></i>
+                </div>
+                <h5 class="card-title">คอนโดนครปฐม</h5>
+                <p class="card-text">
+                  บรรยากาศเงียบสงบ เหมาะแก่การพักอาศัย นักศึกษาหรือทำงาน
+                </p>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
+                <div class="mt-3">
+                  <a href="./Page4.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
                   </a>
                 </div>
@@ -687,6 +716,20 @@
                   src="./images/slide6.jpg"
                   class="d-block w-100 carousel-img rounded"
                   alt="ภาพสไลด์ 6 - ภายในห้องพัก"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/slide7.jpg"
+                  class="d-block w-100 carousel-img rounded"
+                  alt="ภาพสไลด์ 7 - ภายในห้องพัก"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/slide8.jpg"
+                  class="d-block w-100 carousel-img rounded"
+                  alt="ภาพสไลด์ 8 - ภายในห้องพัก"
                 />
               </div>
             </div>
