--- a/Page2.html
+++ b/Page2.html
@@ -192,6 +192,32 @@
               </ul>
             </li>
 
+            <!-- นครปฐม dropdown -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="nakhonPathomDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                นครปฐม
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="nakhonPathomDropdown">
+                <li>
+                  <a class="dropdown-item" href="./Page4.html?period=daily"
+                    >รายวัน</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./Page4.html?period=monthly"
+                    >รายเดือน</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <!-- พัทยา dropdown -->
             <li class="nav-item dropdown">
               <a
