--- a/index Backup.html
+++ b/index Backup.html
@@ -30,90 +30,109 @@
     />
 
     <style>
+      :root {
+        --gold: #d4af37;
+        --gold-dark: #b8860b;
+        --muted-white: rgba(255, 255, 255, 0.96);
+        --text-dark: #222;
+        --card-shadow: 0 10px 30px rgba(34, 34, 34, 0.06);
+      }
+
       * {
         font-family: "Sarabun", sans-serif;
       }
 
       body {
-        background: rgba(255, 255, 255, 0.95);
+        background: var(--muted-white);
         min-height: 100vh;
         padding-top: 160px;
+        color: var(--text-dark);
       }
 
-    .navbar-container {
+      .navbar-container {
         position: fixed;
         top: 0;
         width: 100%;
         z-index: 1030;
         transition: all 0.3s ease;
-        background: rgba(255, 255, 255, 0.95);
-    }
+        background: var(--muted-white);
+        border-bottom: 1px solid rgba(34, 34, 34, 0.04);
+      }
 
-    .navbar-container.scrolled {
-        background: rgba(255, 255, 255, 0.95) !important;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    }
+      .navbar-container.scrolled {
+        background: var(--muted-white) !important;
+        box-shadow: 0 4px 20px rgba(34, 34, 34, 0.06);
+      }
 
-    .navbar-row1 {
+      .navbar-row1 {
         padding: 15px 0;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    }
+        border-bottom: 1px solid rgba(34, 34, 34, 0.04);
+        background: transparent;
+      }
 
-    .navbar-row1.scrolled {
-        border-bottom-color: rgba(0, 0, 0, 0.1);
-    }
+      .navbar-row1.scrolled {
+        border-bottom-color: rgba(34, 34, 34, 0.06);
+      }
 
-    .navbar-brand {
+      .navbar-brand {
         font-size: 1.8rem;
         font-weight: 700;
-        color: #333 !important;
-    }
+        color: var(--gold-dark) !important;
+      }
 
-    .navbar-row2 {
+      .navbar-row2 {
         padding: 12px 0;
-        background: rgba(255, 255, 255, 0.95);
-            }
+        background: var(--muted-white);
+      }
 
-            .nav-location {
-                font-weight: 600;
-                color: #333;
-                margin-right: auto;
-            }
+      .nav-location {
+        font-weight: 600;
+        color: var(--text-dark);
+        margin-right: auto;
+      }
 
-            .navbar-row1 {
-                max-height: 80px;
-                overflow: hidden;
-                transition: max-height 0.3s ease;
-            }
+      .navbar-row1 {
+        max-height: 80px;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+      }
 
-            .navbar-row1.scrolled {
-                max-height: 0;
-            }
+      .navbar-row1.scrolled {
+        max-height: 0;
+      }
 
       .navbar-nav .nav-link {
-        color: #333 !important;
+        color: var(--text-dark) !important;
         margin: 0 15px;
         font-weight: 500;
-        transition: all 0.3s ease;
+        transition: all 0.25s ease;
       }
 
       .navbar-nav .nav-link:hover {
-        color: #667eea !important;
+        color: var(--gold-dark) !important;
+        transform: translateY(-2px);
       }
 
       .btn-contact {
-        background: rgba(102, 126, 234, 0.15);
-        border: 1px solid rgba(102, 126, 234, 0.3);
-        color: #333 !important;
+        background: linear-gradient(
+          90deg,
+          var(--gold) 0%,
+          var(--gold-dark) 100%
+        );
+        color: #fff !important;
         padding: 8px 20px;
         border-radius: 20px;
-        font-weight: 600;
-        transition: all 0.3s ease;
+        font-weight: 700;
+        border: 1px solid rgba(181, 145, 54, 0.15);
+        box-shadow: 0 6px 18px rgba(180, 140, 50, 0.12);
+        transition:
+          transform 0.18s ease,
+          box-shadow 0.18s ease;
       }
 
       .btn-contact:hover {
-        background: rgba(102, 126, 234, 0.3);
-        transform: scale(1.05);
+        transform: translateY(-3px) scale(1.02);
+        box-shadow: 0 10px 30px rgba(180, 140, 50, 0.18);
       }
 
       .hero-section {
@@ -126,6 +145,7 @@
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        background: #fff;
       }
 
       .hero-video {
@@ -134,6 +154,7 @@
         height: 100%;
         object-fit: cover;
         display: block;
+        filter: contrast(0.95) saturate(0.9);
       }
 
       .hero-overlay {
@@ -142,7 +163,18 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.4);
+        /* soft dark layer with subtle gold glow */
+        background:
+          linear-gradient(
+            180deg,
+            rgba(0, 0, 0, 0.42) 0%,
+            rgba(0, 0, 0, 0.3) 60%
+          ),
+          radial-gradient(
+            60% 40% at 10% 10%,
+            rgba(212, 175, 55, 0.06),
+            transparent 20%
+          );
         z-index: 0;
       }
 
@@ -156,13 +188,15 @@
         font-size: 3.5rem;
         font-weight: 700;
         margin-bottom: 20px;
-        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+        text-shadow: 0 6px 30px rgba(0, 0, 0, 0.45);
+        color: #fff;
       }
 
       .hero-section p {
         font-size: 1.3rem;
         margin-bottom: 40px;
-        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+        text-shadow: 0 4px 18px rgba(0, 0, 0, 0.35);
+        color: #fff;
       }
 
       .card {
@@ -170,13 +204,15 @@
         border-radius: 15px;
         overflow: hidden;
         transition: all 0.3s ease;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--card-shadow);
         height: 100%;
+        background: #fff;
+        border: 1px solid rgba(34, 34, 34, 0.03);
       }
 
       .card:hover {
         transform: translateY(-10px);
-        box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 18px 48px rgba(34, 34, 34, 0.08);
       }
 
       .card-img-top {
@@ -189,70 +225,140 @@
       }
 
       .card-title {
-        font-size: 1.5rem;
-        font-weight: 600;
-        color: #667eea;
-        margin-bottom: 15px;
+        font-size: 1.4rem;
+        font-weight: 700;
+        color: var(--gold-dark);
+        margin-bottom: 12px;
       }
 
       .btn-custom {
         background: linear-gradient(
           135deg,
-          rgba(70, 130, 255, 0.18) 0%,
-          rgba(30, 144, 255, 0.1) 100%
+          rgba(217, 180, 80, 0.08) 0%,
+          rgba(212, 175, 55, 0.06) 100%
         );
         backdrop-filter: blur(6px);
         -webkit-backdrop-filter: blur(6px);
-        border: 1px solid rgba(255, 255, 255, 0.12);
-        color: rgb(12, 12, 12);
+        border: 1px solid rgba(212, 175, 55, 0.14);
+        color: var(--text-dark);
         padding: 12px 30px;
         border-radius: 25px;
-        font-weight: 600;
-        transition: all 0.3s ease;
+        font-weight: 700;
+        transition: all 0.28s ease;
+      }
+
+      .btn-custom i {
+        color: var(--gold-dark);
+        margin-right: 8px;
       }
 
       .btn-custom:hover {
-        transform: scale(1.05);
-        box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
-        color: white;
+        transform: scale(1.03);
+        box-shadow: 0 8px 30px rgba(181, 145, 54, 0.12);
+        color: #fff;
+        background: linear-gradient(
+          90deg,
+          var(--gold) 0%,
+          var(--gold-dark) 100%
+        );
+        border-color: rgba(160, 120, 40, 0.18);
       }
 
       .location-section {
         padding: 60px 0;
+        background: #fff;
       }
 
       .section-title {
         text-align: center;
-        color: rgb(0, 0, 0);
+        color: var(--text-dark);
         font-size: 2.5rem;
         font-weight: 700;
         margin-bottom: 50px;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        text-shadow: none;
       }
 
       .feature-icon {
         font-size: 2rem;
-        color: #667eea;
+        color: var(--gold-dark);
         margin-bottom: 15px;
       }
 
       footer {
-        background: rgba(0, 0, 0, 0.3);
-        color: white;
+        background: #fff;
+        color: var(--text-dark);
         padding: 30px 0;
         margin-top: 60px;
+        border-top: 1px solid rgba(34, 34, 34, 0.04);
       }
 
       .badge-price {
-        background: #ff1c1c;
-        color: white;
+        background: linear-gradient(
+          90deg,
+          var(--gold) 0%,
+          var(--gold-dark) 100%
+        );
+        color: #fff;
         padding: 8px 15px;
         border-radius: 20px;
-        font-size: 1.1rem;
-        font-weight: 600;
+        font-size: 1.05rem;
+        font-weight: 700;
+        box-shadow: 0 6px 18px rgba(181, 145, 54, 0.1);
       }
 
-      @media (max-width: 768px) {
+      /* Dropdown on hover styles */
+      .nav-item.dropdown {
+        position: relative;
+      }
+
+      .nav-item .dropdown-toggle {
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+      }
+
+      .nav-item .dropdown-menu {
+        position: absolute;
+        top: calc(100% + 8px);
+        left: 50%;
+        transform: translate(-50%, -10px);
+        min-width: 160px;
+        padding: 6px 0;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 8px 30px rgba(34, 34, 34, 0.08);
+        opacity: 0;
+        visibility: hidden;
+        transform-origin: top center;
+        transition: all 180ms ease;
+        pointer-events: none;
+        z-index: 2050;
+        border: 1px solid rgba(34, 34, 34, 0.06);
+      }
+
+      .nav-item.dropdown:hover .dropdown-menu,
+      .nav-item.dropdown.open .dropdown-menu {
+        opacity: 1;
+        visibility: visible;
+        transform: translate(-50%, 0);
+        pointer-events: auto;
+      }
+
+      .dropdown-item {
+        padding: 8px 18px;
+        color: var(--text-dark);
+        display: block;
+        font-weight: 600;
+        white-space: nowrap;
+      }
+
+      .dropdown-item:hover {
+        background: rgba(212, 175, 55, 0.06);
+        color: var(--gold-dark);
+      }
+
+      /* small screen: disable hover dropdown and make dropdown full width under nav */
+      @media (max-width: 767.98px) {
         body {
           padding-top: 140px;
         }
@@ -263,6 +369,30 @@
 
         .navbar-nav .nav-link {
           margin: 5px 0;
+        }
+
+        .nav-item .dropdown-menu {
+          position: static;
+          transform: none;
+          opacity: 1;
+          visibility: visible;
+          pointer-events: auto;
+          box-shadow: none;
+          border-radius: 8px;
+          margin-top: 8px;
+          display: none;
+        }
+
+        .nav-item.dropdown.open .dropdown-menu {
+          display: block;
+        }
+
+        .nav-item .dropdown-toggle .fa-chevron-down {
+          transition: transform 0.18s ease;
+        }
+
+        .nav-item.dropdown.open .dropdown-toggle .fa-chevron-down {
+          transform: rotate(180deg);
         }
       }
     </style>
@@ -288,13 +418,16 @@
             <!-- Location Display -->
             <span class="nav-location" id="locationDisplay">หน้าแรก</span>
 
-            <!-- Center Navigation Menu -->
+            <!-- Center Navigation Menu with hover dropdowns -->
             <ul class="navbar-nav ms-auto me-auto d-flex flex-row">
               <li class="nav-item">
                 <a class="nav-link" href="./index.html">หน้าแรก</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Page1.html">กรุงเทพฯ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Page4.html">นครปฐม</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Page2.html">พัทยา</a>
@@ -389,25 +522,50 @@
             <span class="visually-hidden">ถัดไป</span>
           </button>
         </div>
+
         <div class="hero-overlay"></div>
-        <p>บริการให้เช่าห้องพักสไตล์คอนโด รายวัน–รายเดือน</p>
-        <a href="#locations" class="btn btn-custom btn-lg">
-        <i class="fas fa-search" style="color: white;"></i> <span style="color: white;">เริ่มค้นหาที่พักของเรา</span>
-        </a>
+
+        <div class="hero-content text-center">
+          <h1
+            style="
+              color: white;
+              font-weight: 700;
+              font-size: 3rem;
+              margin-bottom: 10px;
+              text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+            "
+          >
+            บริการห้องพักสไตล์คอนโด
+          </h1>
+          <p
+            style="
+              color: white;
+              font-size: 1.5rem;
+              font-weight: 600;
+              margin-bottom: 24px;
+              text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+            "
+          >
+            รายเดือน - รายวัน
+          </p>
+          <a href="#locations" class="btn btn-custom btn-lg">
+            <i class="fas fa-search" style="color: white"></i>
+            <span style="color: white"> เริ่มค้นหาที่พักของเรา</span>
+          </a>
+        </div>
       </div>
     </div>
-as 
-   <!-- Locations Section -->
+    <!-- Locations Section -->
     <div class="location-section" id="locations">
       <div class="container">
-        <h2 class="section-title" data-aos="fade-up">เลือกทำเลที่คุณสนใจ</h2>
+        <h2 class="section-title" data-aos="fade-up">เลือกพื้นที่ที่คุณสนใจ</h2>
 
         <div class="row g-4">
           <!-- Bangkok Card -->
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?w=600&h=400&fit=crop"
+                src="./images/Bangkok.jpg"
                 class="card-img-top"
                 alt="กรุงเทพฯ"
               />
@@ -419,7 +577,7 @@ as
                 <p class="card-text">
                   ใจกลางเมือง ใกล้รถไฟฟ้า ครบสิ่งอำนวยความสะดวก
                 </p>
-                <span class="badge-price">เริ่มต้น 1,000 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
                 <div class="mt-3">
                   <a href="./Page1.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
@@ -433,7 +591,7 @@ as
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600&h=400&fit=crop"
+                src="./images/Pattaya.jpg"
                 class="card-img-top"
                 alt="พัทยา"
               />
@@ -445,7 +603,7 @@ as
                 <p class="card-text">
                   วิวทะเล บรรยากาศรีสอร์ท เหมาะสำหรับการพักผ่อน
                 </p>
-                <span class="badge-price">เริ่มต้น 1,200 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,200 บาท</span>
                 <div class="mt-3">
                   <a href="./Page2.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
@@ -459,7 +617,7 @@ as
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=600&h=400&fit=crop"
+                src="./images/Cha-am.jpg"
                 class="card-img-top"
                 alt="ชะอำ"
               />
@@ -471,9 +629,36 @@ as
                 <p class="card-text">
                   ชายทะเล บรรยากาศเงียบสงบ เหมาะแก่การพักอาศัย
                 </p>
-                <span class="badge-price">เริ่มต้น 1,000 บาท</span>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
                 <div class="mt-3">
                   <a href="./Page3.html" class="btn btn-custom">
+                    <i class="fas fa-arrow-right"></i> ดูรายละเอียด
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Nakonprathom -->
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <img
+                src="./images/Cha-am.jpg"
+                class="card-img-top"
+                alt="ชะอำ"
+              />
+              <div class="card-body text-center">
+                <div class="feature-icon">
+                  <i class="fas fa-water"></i>
+                </div>
+                <h5 class="card-title">คอนโดนครปฐม</h5>
+                <p class="card-text">
+                  บรรยากาศเงียบสงบ เหมาะแก่การพักอาศัย นักศึกษาหรือทำงาน
+                </p>
+                <span class="badge-price">เริ่มต้นรายวัน 1,000 บาท</span>
+                <div class="mt-3">
+                  <a href="./Page4.html" class="btn btn-custom">
                     <i class="fas fa-arrow-right"></i> ดูรายละเอียด
                   </a>
                 </div>
@@ -531,6 +716,20 @@ as
                   src="./images/slide6.jpg"
                   class="d-block w-100 carousel-img rounded"
                   alt="ภาพสไลด์ 6 - ภายในห้องพัก"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/slide7.jpg"
+                  class="d-block w-100 carousel-img rounded"
+                  alt="ภาพสไลด์ 7 - ภายในห้องพัก"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./images/slide8.jpg"
+                  class="d-block w-100 carousel-img rounded"
+                  alt="ภาพสไลด์ 8 - ภายในห้องพัก"
                 />
               </div>
             </div>
